Made items a bit taller and fixed margins on smaller screens

--- a/client/app/css/style.css
+++ b/client/app/css/style.css
@@ -34,6 +34,10 @@
   html {
     font-size: 150%;
   }
+  .item {
+    margin:10px 0;
+    height: 160px;
+  }
 }
 
 
